add_compile_definitions(QTAWSAMPLIFYUIBUILDER_LIBRARY)

add_library(QtAwsAmplifyUIBuilder
  qtawsamplifyuibuilderglobal.h
  amplifyuibuilderclient.h
  amplifyuibuilderclient_p.h
  amplifyuibuilderrequest.h
  amplifyuibuilderrequest_p.h
  amplifyuibuilderresponse.h
  amplifyuibuilderresponse_p.h
  createcomponentrequest.h
  createcomponentrequest_p.h
  createcomponentresponse.h
  createcomponentresponse_p.h
  createformrequest.h
  createformrequest_p.h
  createformresponse.h
  createformresponse_p.h
  createthemerequest.h
  createthemerequest_p.h
  createthemeresponse.h
  createthemeresponse_p.h
  deletecomponentrequest.h
  deletecomponentrequest_p.h
  deletecomponentresponse.h
  deletecomponentresponse_p.h
  deleteformrequest.h
  deleteformrequest_p.h
  deleteformresponse.h
  deleteformresponse_p.h
  deletethemerequest.h
  deletethemerequest_p.h
  deletethemeresponse.h
  deletethemeresponse_p.h
  exchangecodefortokenrequest.h
  exchangecodefortokenrequest_p.h
  exchangecodefortokenresponse.h
  exchangecodefortokenresponse_p.h
  exportcomponentsrequest.h
  exportcomponentsrequest_p.h
  exportcomponentsresponse.h
  exportcomponentsresponse_p.h
  exportformsrequest.h
  exportformsrequest_p.h
  exportformsresponse.h
  exportformsresponse_p.h
  exportthemesrequest.h
  exportthemesrequest_p.h
  exportthemesresponse.h
  exportthemesresponse_p.h
  getcomponentrequest.h
  getcomponentrequest_p.h
  getcomponentresponse.h
  getcomponentresponse_p.h
  getformrequest.h
  getformrequest_p.h
  getformresponse.h
  getformresponse_p.h
  getmetadatarequest.h
  getmetadatarequest_p.h
  getmetadataresponse.h
  getmetadataresponse_p.h
  getthemerequest.h
  getthemerequest_p.h
  getthemeresponse.h
  getthemeresponse_p.h
  listcomponentsrequest.h
  listcomponentsrequest_p.h
  listcomponentsresponse.h
  listcomponentsresponse_p.h
  listformsrequest.h
  listformsrequest_p.h
  listformsresponse.h
  listformsresponse_p.h
  listthemesrequest.h
  listthemesrequest_p.h
  listthemesresponse.h
  listthemesresponse_p.h
  putmetadataflagrequest.h
  putmetadataflagrequest_p.h
  putmetadataflagresponse.h
  putmetadataflagresponse_p.h
  refreshtokenrequest.h
  refreshtokenrequest_p.h
  refreshtokenresponse.h
  refreshtokenresponse_p.h
  updatecomponentrequest.h
  updatecomponentrequest_p.h
  updatecomponentresponse.h
  updatecomponentresponse_p.h
  updateformrequest.h
  updateformrequest_p.h
  updateformresponse.h
  updateformresponse_p.h
  updatethemerequest.h
  updatethemerequest_p.h
  updatethemeresponse.h
  updatethemeresponse_p.h
  amplifyuibuilderclient.cpp
  amplifyuibuilderrequest.cpp
  amplifyuibuilderresponse.cpp
  createcomponentrequest.cpp
  createcomponentresponse.cpp
  createformrequest.cpp
  createformresponse.cpp
  createthemerequest.cpp
  createthemeresponse.cpp
  deletecomponentrequest.cpp
  deletecomponentresponse.cpp
  deleteformrequest.cpp
  deleteformresponse.cpp
  deletethemerequest.cpp
  deletethemeresponse.cpp
  exchangecodefortokenrequest.cpp
  exchangecodefortokenresponse.cpp
  exportcomponentsrequest.cpp
  exportcomponentsresponse.cpp
  exportformsrequest.cpp
  exportformsresponse.cpp
  exportthemesrequest.cpp
  exportthemesresponse.cpp
  getcomponentrequest.cpp
  getcomponentresponse.cpp
  getformrequest.cpp
  getformresponse.cpp
  getmetadatarequest.cpp
  getmetadataresponse.cpp
  getthemerequest.cpp
  getthemeresponse.cpp
  listcomponentsrequest.cpp
  listcomponentsresponse.cpp
  listformsrequest.cpp
  listformsresponse.cpp
  listthemesrequest.cpp
  listthemesresponse.cpp
  putmetadataflagrequest.cpp
  putmetadataflagresponse.cpp
  refreshtokenrequest.cpp
  refreshtokenresponse.cpp
  updatecomponentrequest.cpp
  updatecomponentresponse.cpp
  updateformrequest.cpp
  updateformresponse.cpp
  updatethemerequest.cpp
  updatethemeresponse.cpp)

target_link_libraries(QtAwsAmplifyUIBuilder
  PRIVATE QtAwsCore
  PRIVATE Qt${QT_VERSION_MAJOR}::Core
  PRIVATE Qt${QT_VERSION_MAJOR}::Network)
