set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

find_package(Qt5 COMPONENTS Core Network REQUIRED)

add_library(QtAwsAPIGateway
  apigatewayclient.h
  apigatewayclient_p.h
  apigatewayrequest.h
  apigatewayrequest_p.h
  apigatewayresponse.h
  apigatewayresponse_p.h
  createapikeyrequest.h
  createapikeyrequest_p.h
  createapikeyresponse.h
  createapikeyresponse_p.h
  createauthorizerrequest.h
  createauthorizerrequest_p.h
  createauthorizerresponse.h
  createauthorizerresponse_p.h
  createbasepathmappingrequest.h
  createbasepathmappingrequest_p.h
  createbasepathmappingresponse.h
  createbasepathmappingresponse_p.h
  createdeploymentrequest.h
  createdeploymentrequest_p.h
  createdeploymentresponse.h
  createdeploymentresponse_p.h
  createdocumentationpartrequest.h
  createdocumentationpartrequest_p.h
  createdocumentationpartresponse.h
  createdocumentationpartresponse_p.h
  createdocumentationversionrequest.h
  createdocumentationversionrequest_p.h
  createdocumentationversionresponse.h
  createdocumentationversionresponse_p.h
  createdomainnamerequest.h
  createdomainnamerequest_p.h
  createdomainnameresponse.h
  createdomainnameresponse_p.h
  createmodelrequest.h
  createmodelrequest_p.h
  createmodelresponse.h
  createmodelresponse_p.h
  createrequestvalidatorrequest.h
  createrequestvalidatorrequest_p.h
  createrequestvalidatorresponse.h
  createrequestvalidatorresponse_p.h
  createresourcerequest.h
  createresourcerequest_p.h
  createresourceresponse.h
  createresourceresponse_p.h
  createrestapirequest.h
  createrestapirequest_p.h
  createrestapiresponse.h
  createrestapiresponse_p.h
  createstagerequest.h
  createstagerequest_p.h
  createstageresponse.h
  createstageresponse_p.h
  createusageplankeyrequest.h
  createusageplankeyrequest_p.h
  createusageplankeyresponse.h
  createusageplankeyresponse_p.h
  createusageplanrequest.h
  createusageplanrequest_p.h
  createusageplanresponse.h
  createusageplanresponse_p.h
  createvpclinkrequest.h
  createvpclinkrequest_p.h
  createvpclinkresponse.h
  createvpclinkresponse_p.h
  deleteapikeyrequest.h
  deleteapikeyrequest_p.h
  deleteapikeyresponse.h
  deleteapikeyresponse_p.h
  deleteauthorizerrequest.h
  deleteauthorizerrequest_p.h
  deleteauthorizerresponse.h
  deleteauthorizerresponse_p.h
  deletebasepathmappingrequest.h
  deletebasepathmappingrequest_p.h
  deletebasepathmappingresponse.h
  deletebasepathmappingresponse_p.h
  deleteclientcertificaterequest.h
  deleteclientcertificaterequest_p.h
  deleteclientcertificateresponse.h
  deleteclientcertificateresponse_p.h
  deletedeploymentrequest.h
  deletedeploymentrequest_p.h
  deletedeploymentresponse.h
  deletedeploymentresponse_p.h
  deletedocumentationpartrequest.h
  deletedocumentationpartrequest_p.h
  deletedocumentationpartresponse.h
  deletedocumentationpartresponse_p.h
  deletedocumentationversionrequest.h
  deletedocumentationversionrequest_p.h
  deletedocumentationversionresponse.h
  deletedocumentationversionresponse_p.h
  deletedomainnamerequest.h
  deletedomainnamerequest_p.h
  deletedomainnameresponse.h
  deletedomainnameresponse_p.h
  deletegatewayresponserequest.h
  deletegatewayresponserequest_p.h
  deletegatewayresponseresponse.h
  deletegatewayresponseresponse_p.h
  deleteintegrationrequest.h
  deleteintegrationrequest_p.h
  deleteintegrationresponse.h
  deleteintegrationresponse_p.h
  deleteintegrationresponserequest.h
  deleteintegrationresponserequest_p.h
  deleteintegrationresponseresponse.h
  deleteintegrationresponseresponse_p.h
  deletemethodrequest.h
  deletemethodrequest_p.h
  deletemethodresponse.h
  deletemethodresponse_p.h
  deletemethodresponserequest.h
  deletemethodresponserequest_p.h
  deletemethodresponseresponse.h
  deletemethodresponseresponse_p.h
  deletemodelrequest.h
  deletemodelrequest_p.h
  deletemodelresponse.h
  deletemodelresponse_p.h
  deleterequestvalidatorrequest.h
  deleterequestvalidatorrequest_p.h
  deleterequestvalidatorresponse.h
  deleterequestvalidatorresponse_p.h
  deleteresourcerequest.h
  deleteresourcerequest_p.h
  deleteresourceresponse.h
  deleteresourceresponse_p.h
  deleterestapirequest.h
  deleterestapirequest_p.h
  deleterestapiresponse.h
  deleterestapiresponse_p.h
  deletestagerequest.h
  deletestagerequest_p.h
  deletestageresponse.h
  deletestageresponse_p.h
  deleteusageplankeyrequest.h
  deleteusageplankeyrequest_p.h
  deleteusageplankeyresponse.h
  deleteusageplankeyresponse_p.h
  deleteusageplanrequest.h
  deleteusageplanrequest_p.h
  deleteusageplanresponse.h
  deleteusageplanresponse_p.h
  deletevpclinkrequest.h
  deletevpclinkrequest_p.h
  deletevpclinkresponse.h
  deletevpclinkresponse_p.h
  flushstageauthorizerscacherequest.h
  flushstageauthorizerscacherequest_p.h
  flushstageauthorizerscacheresponse.h
  flushstageauthorizerscacheresponse_p.h
  flushstagecacherequest.h
  flushstagecacherequest_p.h
  flushstagecacheresponse.h
  flushstagecacheresponse_p.h
  generateclientcertificaterequest.h
  generateclientcertificaterequest_p.h
  generateclientcertificateresponse.h
  generateclientcertificateresponse_p.h
  getaccountrequest.h
  getaccountrequest_p.h
  getaccountresponse.h
  getaccountresponse_p.h
  getapikeyrequest.h
  getapikeyrequest_p.h
  getapikeyresponse.h
  getapikeyresponse_p.h
  getapikeysrequest.h
  getapikeysrequest_p.h
  getapikeysresponse.h
  getapikeysresponse_p.h
  getauthorizerrequest.h
  getauthorizerrequest_p.h
  getauthorizerresponse.h
  getauthorizerresponse_p.h
  getauthorizersrequest.h
  getauthorizersrequest_p.h
  getauthorizersresponse.h
  getauthorizersresponse_p.h
  getbasepathmappingrequest.h
  getbasepathmappingrequest_p.h
  getbasepathmappingresponse.h
  getbasepathmappingresponse_p.h
  getbasepathmappingsrequest.h
  getbasepathmappingsrequest_p.h
  getbasepathmappingsresponse.h
  getbasepathmappingsresponse_p.h
  getclientcertificaterequest.h
  getclientcertificaterequest_p.h
  getclientcertificateresponse.h
  getclientcertificateresponse_p.h
  getclientcertificatesrequest.h
  getclientcertificatesrequest_p.h
  getclientcertificatesresponse.h
  getclientcertificatesresponse_p.h
  getdeploymentrequest.h
  getdeploymentrequest_p.h
  getdeploymentresponse.h
  getdeploymentresponse_p.h
  getdeploymentsrequest.h
  getdeploymentsrequest_p.h
  getdeploymentsresponse.h
  getdeploymentsresponse_p.h
  getdocumentationpartrequest.h
  getdocumentationpartrequest_p.h
  getdocumentationpartresponse.h
  getdocumentationpartresponse_p.h
  getdocumentationpartsrequest.h
  getdocumentationpartsrequest_p.h
  getdocumentationpartsresponse.h
  getdocumentationpartsresponse_p.h
  getdocumentationversionrequest.h
  getdocumentationversionrequest_p.h
  getdocumentationversionresponse.h
  getdocumentationversionresponse_p.h
  getdocumentationversionsrequest.h
  getdocumentationversionsrequest_p.h
  getdocumentationversionsresponse.h
  getdocumentationversionsresponse_p.h
  getdomainnamerequest.h
  getdomainnamerequest_p.h
  getdomainnameresponse.h
  getdomainnameresponse_p.h
  getdomainnamesrequest.h
  getdomainnamesrequest_p.h
  getdomainnamesresponse.h
  getdomainnamesresponse_p.h
  getexportrequest.h
  getexportrequest_p.h
  getexportresponse.h
  getexportresponse_p.h
  getgatewayresponserequest.h
  getgatewayresponserequest_p.h
  getgatewayresponseresponse.h
  getgatewayresponseresponse_p.h
  getgatewayresponsesrequest.h
  getgatewayresponsesrequest_p.h
  getgatewayresponsesresponse.h
  getgatewayresponsesresponse_p.h
  getintegrationrequest.h
  getintegrationrequest_p.h
  getintegrationresponse.h
  getintegrationresponse_p.h
  getintegrationresponserequest.h
  getintegrationresponserequest_p.h
  getintegrationresponseresponse.h
  getintegrationresponseresponse_p.h
  getmethodrequest.h
  getmethodrequest_p.h
  getmethodresponse.h
  getmethodresponse_p.h
  getmethodresponserequest.h
  getmethodresponserequest_p.h
  getmethodresponseresponse.h
  getmethodresponseresponse_p.h
  getmodelrequest.h
  getmodelrequest_p.h
  getmodelresponse.h
  getmodelresponse_p.h
  getmodelsrequest.h
  getmodelsrequest_p.h
  getmodelsresponse.h
  getmodelsresponse_p.h
  getmodeltemplaterequest.h
  getmodeltemplaterequest_p.h
  getmodeltemplateresponse.h
  getmodeltemplateresponse_p.h
  getrequestvalidatorrequest.h
  getrequestvalidatorrequest_p.h
  getrequestvalidatorresponse.h
  getrequestvalidatorresponse_p.h
  getrequestvalidatorsrequest.h
  getrequestvalidatorsrequest_p.h
  getrequestvalidatorsresponse.h
  getrequestvalidatorsresponse_p.h
  getresourcerequest.h
  getresourcerequest_p.h
  getresourceresponse.h
  getresourceresponse_p.h
  getresourcesrequest.h
  getresourcesrequest_p.h
  getresourcesresponse.h
  getresourcesresponse_p.h
  getrestapirequest.h
  getrestapirequest_p.h
  getrestapiresponse.h
  getrestapiresponse_p.h
  getrestapisrequest.h
  getrestapisrequest_p.h
  getrestapisresponse.h
  getrestapisresponse_p.h
  getsdkrequest.h
  getsdkrequest_p.h
  getsdkresponse.h
  getsdkresponse_p.h
  getsdktyperequest.h
  getsdktyperequest_p.h
  getsdktyperesponse.h
  getsdktyperesponse_p.h
  getsdktypesrequest.h
  getsdktypesrequest_p.h
  getsdktypesresponse.h
  getsdktypesresponse_p.h
  getstagerequest.h
  getstagerequest_p.h
  getstageresponse.h
  getstageresponse_p.h
  getstagesrequest.h
  getstagesrequest_p.h
  getstagesresponse.h
  getstagesresponse_p.h
  gettagsrequest.h
  gettagsrequest_p.h
  gettagsresponse.h
  gettagsresponse_p.h
  getusageplankeyrequest.h
  getusageplankeyrequest_p.h
  getusageplankeyresponse.h
  getusageplankeyresponse_p.h
  getusageplankeysrequest.h
  getusageplankeysrequest_p.h
  getusageplankeysresponse.h
  getusageplankeysresponse_p.h
  getusageplanrequest.h
  getusageplanrequest_p.h
  getusageplanresponse.h
  getusageplanresponse_p.h
  getusageplansrequest.h
  getusageplansrequest_p.h
  getusageplansresponse.h
  getusageplansresponse_p.h
  getusagerequest.h
  getusagerequest_p.h
  getusageresponse.h
  getusageresponse_p.h
  getvpclinkrequest.h
  getvpclinkrequest_p.h
  getvpclinkresponse.h
  getvpclinkresponse_p.h
  getvpclinksrequest.h
  getvpclinksrequest_p.h
  getvpclinksresponse.h
  getvpclinksresponse_p.h
  importapikeysrequest.h
  importapikeysrequest_p.h
  importapikeysresponse.h
  importapikeysresponse_p.h
  importdocumentationpartsrequest.h
  importdocumentationpartsrequest_p.h
  importdocumentationpartsresponse.h
  importdocumentationpartsresponse_p.h
  importrestapirequest.h
  importrestapirequest_p.h
  importrestapiresponse.h
  importrestapiresponse_p.h
  putgatewayresponserequest.h
  putgatewayresponserequest_p.h
  putgatewayresponseresponse.h
  putgatewayresponseresponse_p.h
  putintegrationrequest.h
  putintegrationrequest_p.h
  putintegrationresponse.h
  putintegrationresponse_p.h
  putintegrationresponserequest.h
  putintegrationresponserequest_p.h
  putintegrationresponseresponse.h
  putintegrationresponseresponse_p.h
  putmethodrequest.h
  putmethodrequest_p.h
  putmethodresponse.h
  putmethodresponse_p.h
  putmethodresponserequest.h
  putmethodresponserequest_p.h
  putmethodresponseresponse.h
  putmethodresponseresponse_p.h
  putrestapirequest.h
  putrestapirequest_p.h
  putrestapiresponse.h
  putrestapiresponse_p.h
  tagresourcerequest.h
  tagresourcerequest_p.h
  tagresourceresponse.h
  tagresourceresponse_p.h
  testinvokeauthorizerrequest.h
  testinvokeauthorizerrequest_p.h
  testinvokeauthorizerresponse.h
  testinvokeauthorizerresponse_p.h
  testinvokemethodrequest.h
  testinvokemethodrequest_p.h
  testinvokemethodresponse.h
  testinvokemethodresponse_p.h
  untagresourcerequest.h
  untagresourcerequest_p.h
  untagresourceresponse.h
  untagresourceresponse_p.h
  updateaccountrequest.h
  updateaccountrequest_p.h
  updateaccountresponse.h
  updateaccountresponse_p.h
  updateapikeyrequest.h
  updateapikeyrequest_p.h
  updateapikeyresponse.h
  updateapikeyresponse_p.h
  updateauthorizerrequest.h
  updateauthorizerrequest_p.h
  updateauthorizerresponse.h
  updateauthorizerresponse_p.h
  updatebasepathmappingrequest.h
  updatebasepathmappingrequest_p.h
  updatebasepathmappingresponse.h
  updatebasepathmappingresponse_p.h
  updateclientcertificaterequest.h
  updateclientcertificaterequest_p.h
  updateclientcertificateresponse.h
  updateclientcertificateresponse_p.h
  updatedeploymentrequest.h
  updatedeploymentrequest_p.h
  updatedeploymentresponse.h
  updatedeploymentresponse_p.h
  updatedocumentationpartrequest.h
  updatedocumentationpartrequest_p.h
  updatedocumentationpartresponse.h
  updatedocumentationpartresponse_p.h
  updatedocumentationversionrequest.h
  updatedocumentationversionrequest_p.h
  updatedocumentationversionresponse.h
  updatedocumentationversionresponse_p.h
  updatedomainnamerequest.h
  updatedomainnamerequest_p.h
  updatedomainnameresponse.h
  updatedomainnameresponse_p.h
  updategatewayresponserequest.h
  updategatewayresponserequest_p.h
  updategatewayresponseresponse.h
  updategatewayresponseresponse_p.h
  updateintegrationrequest.h
  updateintegrationrequest_p.h
  updateintegrationresponse.h
  updateintegrationresponse_p.h
  updateintegrationresponserequest.h
  updateintegrationresponserequest_p.h
  updateintegrationresponseresponse.h
  updateintegrationresponseresponse_p.h
  updatemethodrequest.h
  updatemethodrequest_p.h
  updatemethodresponse.h
  updatemethodresponse_p.h
  updatemethodresponserequest.h
  updatemethodresponserequest_p.h
  updatemethodresponseresponse.h
  updatemethodresponseresponse_p.h
  updatemodelrequest.h
  updatemodelrequest_p.h
  updatemodelresponse.h
  updatemodelresponse_p.h
  updaterequestvalidatorrequest.h
  updaterequestvalidatorrequest_p.h
  updaterequestvalidatorresponse.h
  updaterequestvalidatorresponse_p.h
  updateresourcerequest.h
  updateresourcerequest_p.h
  updateresourceresponse.h
  updateresourceresponse_p.h
  updaterestapirequest.h
  updaterestapirequest_p.h
  updaterestapiresponse.h
  updaterestapiresponse_p.h
  updatestagerequest.h
  updatestagerequest_p.h
  updatestageresponse.h
  updatestageresponse_p.h
  updateusageplanrequest.h
  updateusageplanrequest_p.h
  updateusageplanresponse.h
  updateusageplanresponse_p.h
  updateusagerequest.h
  updateusagerequest_p.h
  updateusageresponse.h
  updateusageresponse_p.h
  updatevpclinkrequest.h
  updatevpclinkrequest_p.h
  updatevpclinkresponse.h
  updatevpclinkresponse_p.h
  apigatewayclient.cpp
  apigatewayrequest.cpp
  apigatewayresponse.cpp
  createapikeyrequest.cpp
  createapikeyresponse.cpp
  createauthorizerrequest.cpp
  createauthorizerresponse.cpp
  createbasepathmappingrequest.cpp
  createbasepathmappingresponse.cpp
  createdeploymentrequest.cpp
  createdeploymentresponse.cpp
  createdocumentationpartrequest.cpp
  createdocumentationpartresponse.cpp
  createdocumentationversionrequest.cpp
  createdocumentationversionresponse.cpp
  createdomainnamerequest.cpp
  createdomainnameresponse.cpp
  createmodelrequest.cpp
  createmodelresponse.cpp
  createrequestvalidatorrequest.cpp
  createrequestvalidatorresponse.cpp
  createresourcerequest.cpp
  createresourceresponse.cpp
  createrestapirequest.cpp
  createrestapiresponse.cpp
  createstagerequest.cpp
  createstageresponse.cpp
  createusageplankeyrequest.cpp
  createusageplankeyresponse.cpp
  createusageplanrequest.cpp
  createusageplanresponse.cpp
  createvpclinkrequest.cpp
  createvpclinkresponse.cpp
  deleteapikeyrequest.cpp
  deleteapikeyresponse.cpp
  deleteauthorizerrequest.cpp
  deleteauthorizerresponse.cpp
  deletebasepathmappingrequest.cpp
  deletebasepathmappingresponse.cpp
  deleteclientcertificaterequest.cpp
  deleteclientcertificateresponse.cpp
  deletedeploymentrequest.cpp
  deletedeploymentresponse.cpp
  deletedocumentationpartrequest.cpp
  deletedocumentationpartresponse.cpp
  deletedocumentationversionrequest.cpp
  deletedocumentationversionresponse.cpp
  deletedomainnamerequest.cpp
  deletedomainnameresponse.cpp
  deletegatewayresponserequest.cpp
  deletegatewayresponseresponse.cpp
  deleteintegrationrequest.cpp
  deleteintegrationresponse.cpp
  deleteintegrationresponserequest.cpp
  deleteintegrationresponseresponse.cpp
  deletemethodrequest.cpp
  deletemethodresponse.cpp
  deletemethodresponserequest.cpp
  deletemethodresponseresponse.cpp
  deletemodelrequest.cpp
  deletemodelresponse.cpp
  deleterequestvalidatorrequest.cpp
  deleterequestvalidatorresponse.cpp
  deleteresourcerequest.cpp
  deleteresourceresponse.cpp
  deleterestapirequest.cpp
  deleterestapiresponse.cpp
  deletestagerequest.cpp
  deletestageresponse.cpp
  deleteusageplankeyrequest.cpp
  deleteusageplankeyresponse.cpp
  deleteusageplanrequest.cpp
  deleteusageplanresponse.cpp
  deletevpclinkrequest.cpp
  deletevpclinkresponse.cpp
  flushstageauthorizerscacherequest.cpp
  flushstageauthorizerscacheresponse.cpp
  flushstagecacherequest.cpp
  flushstagecacheresponse.cpp
  generateclientcertificaterequest.cpp
  generateclientcertificateresponse.cpp
  getaccountrequest.cpp
  getaccountresponse.cpp
  getapikeyrequest.cpp
  getapikeyresponse.cpp
  getapikeysrequest.cpp
  getapikeysresponse.cpp
  getauthorizerrequest.cpp
  getauthorizerresponse.cpp
  getauthorizersrequest.cpp
  getauthorizersresponse.cpp
  getbasepathmappingrequest.cpp
  getbasepathmappingresponse.cpp
  getbasepathmappingsrequest.cpp
  getbasepathmappingsresponse.cpp
  getclientcertificaterequest.cpp
  getclientcertificateresponse.cpp
  getclientcertificatesrequest.cpp
  getclientcertificatesresponse.cpp
  getdeploymentrequest.cpp
  getdeploymentresponse.cpp
  getdeploymentsrequest.cpp
  getdeploymentsresponse.cpp
  getdocumentationpartrequest.cpp
  getdocumentationpartresponse.cpp
  getdocumentationpartsrequest.cpp
  getdocumentationpartsresponse.cpp
  getdocumentationversionrequest.cpp
  getdocumentationversionresponse.cpp
  getdocumentationversionsrequest.cpp
  getdocumentationversionsresponse.cpp
  getdomainnamerequest.cpp
  getdomainnameresponse.cpp
  getdomainnamesrequest.cpp
  getdomainnamesresponse.cpp
  getexportrequest.cpp
  getexportresponse.cpp
  getgatewayresponserequest.cpp
  getgatewayresponseresponse.cpp
  getgatewayresponsesrequest.cpp
  getgatewayresponsesresponse.cpp
  getintegrationrequest.cpp
  getintegrationresponse.cpp
  getintegrationresponserequest.cpp
  getintegrationresponseresponse.cpp
  getmethodrequest.cpp
  getmethodresponse.cpp
  getmethodresponserequest.cpp
  getmethodresponseresponse.cpp
  getmodelrequest.cpp
  getmodelresponse.cpp
  getmodelsrequest.cpp
  getmodelsresponse.cpp
  getmodeltemplaterequest.cpp
  getmodeltemplateresponse.cpp
  getrequestvalidatorrequest.cpp
  getrequestvalidatorresponse.cpp
  getrequestvalidatorsrequest.cpp
  getrequestvalidatorsresponse.cpp
  getresourcerequest.cpp
  getresourceresponse.cpp
  getresourcesrequest.cpp
  getresourcesresponse.cpp
  getrestapirequest.cpp
  getrestapiresponse.cpp
  getrestapisrequest.cpp
  getrestapisresponse.cpp
  getsdkrequest.cpp
  getsdkresponse.cpp
  getsdktyperequest.cpp
  getsdktyperesponse.cpp
  getsdktypesrequest.cpp
  getsdktypesresponse.cpp
  getstagerequest.cpp
  getstageresponse.cpp
  getstagesrequest.cpp
  getstagesresponse.cpp
  gettagsrequest.cpp
  gettagsresponse.cpp
  getusageplankeyrequest.cpp
  getusageplankeyresponse.cpp
  getusageplankeysrequest.cpp
  getusageplankeysresponse.cpp
  getusageplanrequest.cpp
  getusageplanresponse.cpp
  getusageplansrequest.cpp
  getusageplansresponse.cpp
  getusagerequest.cpp
  getusageresponse.cpp
  getvpclinkrequest.cpp
  getvpclinkresponse.cpp
  getvpclinksrequest.cpp
  getvpclinksresponse.cpp
  importapikeysrequest.cpp
  importapikeysresponse.cpp
  importdocumentationpartsrequest.cpp
  importdocumentationpartsresponse.cpp
  importrestapirequest.cpp
  importrestapiresponse.cpp
  putgatewayresponserequest.cpp
  putgatewayresponseresponse.cpp
  putintegrationrequest.cpp
  putintegrationresponse.cpp
  putintegrationresponserequest.cpp
  putintegrationresponseresponse.cpp
  putmethodrequest.cpp
  putmethodresponse.cpp
  putmethodresponserequest.cpp
  putmethodresponseresponse.cpp
  putrestapirequest.cpp
  putrestapiresponse.cpp
  tagresourcerequest.cpp
  tagresourceresponse.cpp
  testinvokeauthorizerrequest.cpp
  testinvokeauthorizerresponse.cpp
  testinvokemethodrequest.cpp
  testinvokemethodresponse.cpp
  untagresourcerequest.cpp
  untagresourceresponse.cpp
  updateaccountrequest.cpp
  updateaccountresponse.cpp
  updateapikeyrequest.cpp
  updateapikeyresponse.cpp
  updateauthorizerrequest.cpp
  updateauthorizerresponse.cpp
  updatebasepathmappingrequest.cpp
  updatebasepathmappingresponse.cpp
  updateclientcertificaterequest.cpp
  updateclientcertificateresponse.cpp
  updatedeploymentrequest.cpp
  updatedeploymentresponse.cpp
  updatedocumentationpartrequest.cpp
  updatedocumentationpartresponse.cpp
  updatedocumentationversionrequest.cpp
  updatedocumentationversionresponse.cpp
  updatedomainnamerequest.cpp
  updatedomainnameresponse.cpp
  updategatewayresponserequest.cpp
  updategatewayresponseresponse.cpp
  updateintegrationrequest.cpp
  updateintegrationresponse.cpp
  updateintegrationresponserequest.cpp
  updateintegrationresponseresponse.cpp
  updatemethodrequest.cpp
  updatemethodresponse.cpp
  updatemethodresponserequest.cpp
  updatemethodresponseresponse.cpp
  updatemodelrequest.cpp
  updatemodelresponse.cpp
  updaterequestvalidatorrequest.cpp
  updaterequestvalidatorresponse.cpp
  updateresourcerequest.cpp
  updateresourceresponse.cpp
  updaterestapirequest.cpp
  updaterestapiresponse.cpp
  updatestagerequest.cpp
  updatestageresponse.cpp
  updateusageplanrequest.cpp
  updateusageplanresponse.cpp
  updateusagerequest.cpp
  updateusageresponse.cpp
  updatevpclinkrequest.cpp
  updatevpclinkresponse.cpp)

add_dependencies(QtAwsAPIGateway QtAwsCore)

target_link_libraries(QtAwsAPIGateway PRIVATE Qt5::Core Qt5::Network)
