add_library(QtAwsApiGatewayV2
  apigatewayv2client.h
  apigatewayv2client_p.h
  apigatewayv2request.h
  apigatewayv2request_p.h
  apigatewayv2response.h
  apigatewayv2response_p.h
  createapimappingrequest.h
  createapimappingrequest_p.h
  createapimappingresponse.h
  createapimappingresponse_p.h
  createapirequest.h
  createapirequest_p.h
  createapiresponse.h
  createapiresponse_p.h
  createauthorizerrequest.h
  createauthorizerrequest_p.h
  createauthorizerresponse.h
  createauthorizerresponse_p.h
  createdeploymentrequest.h
  createdeploymentrequest_p.h
  createdeploymentresponse.h
  createdeploymentresponse_p.h
  createdomainnamerequest.h
  createdomainnamerequest_p.h
  createdomainnameresponse.h
  createdomainnameresponse_p.h
  createintegrationrequest.h
  createintegrationrequest_p.h
  createintegrationresponse.h
  createintegrationresponse_p.h
  createintegrationresponserequest.h
  createintegrationresponserequest_p.h
  createintegrationresponseresponse.h
  createintegrationresponseresponse_p.h
  createmodelrequest.h
  createmodelrequest_p.h
  createmodelresponse.h
  createmodelresponse_p.h
  createrouterequest.h
  createrouterequest_p.h
  createrouteresponse.h
  createrouteresponse_p.h
  createrouteresponserequest.h
  createrouteresponserequest_p.h
  createrouteresponseresponse.h
  createrouteresponseresponse_p.h
  createstagerequest.h
  createstagerequest_p.h
  createstageresponse.h
  createstageresponse_p.h
  createvpclinkrequest.h
  createvpclinkrequest_p.h
  createvpclinkresponse.h
  createvpclinkresponse_p.h
  deleteaccesslogsettingsrequest.h
  deleteaccesslogsettingsrequest_p.h
  deleteaccesslogsettingsresponse.h
  deleteaccesslogsettingsresponse_p.h
  deleteapimappingrequest.h
  deleteapimappingrequest_p.h
  deleteapimappingresponse.h
  deleteapimappingresponse_p.h
  deleteapirequest.h
  deleteapirequest_p.h
  deleteapiresponse.h
  deleteapiresponse_p.h
  deleteauthorizerrequest.h
  deleteauthorizerrequest_p.h
  deleteauthorizerresponse.h
  deleteauthorizerresponse_p.h
  deletecorsconfigurationrequest.h
  deletecorsconfigurationrequest_p.h
  deletecorsconfigurationresponse.h
  deletecorsconfigurationresponse_p.h
  deletedeploymentrequest.h
  deletedeploymentrequest_p.h
  deletedeploymentresponse.h
  deletedeploymentresponse_p.h
  deletedomainnamerequest.h
  deletedomainnamerequest_p.h
  deletedomainnameresponse.h
  deletedomainnameresponse_p.h
  deleteintegrationrequest.h
  deleteintegrationrequest_p.h
  deleteintegrationresponse.h
  deleteintegrationresponse_p.h
  deleteintegrationresponserequest.h
  deleteintegrationresponserequest_p.h
  deleteintegrationresponseresponse.h
  deleteintegrationresponseresponse_p.h
  deletemodelrequest.h
  deletemodelrequest_p.h
  deletemodelresponse.h
  deletemodelresponse_p.h
  deleterouterequest.h
  deleterouterequest_p.h
  deleterouterequestparameterrequest.h
  deleterouterequestparameterrequest_p.h
  deleterouterequestparameterresponse.h
  deleterouterequestparameterresponse_p.h
  deleterouteresponse.h
  deleterouteresponse_p.h
  deleterouteresponserequest.h
  deleterouteresponserequest_p.h
  deleterouteresponseresponse.h
  deleterouteresponseresponse_p.h
  deleteroutesettingsrequest.h
  deleteroutesettingsrequest_p.h
  deleteroutesettingsresponse.h
  deleteroutesettingsresponse_p.h
  deletestagerequest.h
  deletestagerequest_p.h
  deletestageresponse.h
  deletestageresponse_p.h
  deletevpclinkrequest.h
  deletevpclinkrequest_p.h
  deletevpclinkresponse.h
  deletevpclinkresponse_p.h
  exportapirequest.h
  exportapirequest_p.h
  exportapiresponse.h
  exportapiresponse_p.h
  getapimappingrequest.h
  getapimappingrequest_p.h
  getapimappingresponse.h
  getapimappingresponse_p.h
  getapimappingsrequest.h
  getapimappingsrequest_p.h
  getapimappingsresponse.h
  getapimappingsresponse_p.h
  getapirequest.h
  getapirequest_p.h
  getapiresponse.h
  getapiresponse_p.h
  getapisrequest.h
  getapisrequest_p.h
  getapisresponse.h
  getapisresponse_p.h
  getauthorizerrequest.h
  getauthorizerrequest_p.h
  getauthorizerresponse.h
  getauthorizerresponse_p.h
  getauthorizersrequest.h
  getauthorizersrequest_p.h
  getauthorizersresponse.h
  getauthorizersresponse_p.h
  getdeploymentrequest.h
  getdeploymentrequest_p.h
  getdeploymentresponse.h
  getdeploymentresponse_p.h
  getdeploymentsrequest.h
  getdeploymentsrequest_p.h
  getdeploymentsresponse.h
  getdeploymentsresponse_p.h
  getdomainnamerequest.h
  getdomainnamerequest_p.h
  getdomainnameresponse.h
  getdomainnameresponse_p.h
  getdomainnamesrequest.h
  getdomainnamesrequest_p.h
  getdomainnamesresponse.h
  getdomainnamesresponse_p.h
  getintegrationrequest.h
  getintegrationrequest_p.h
  getintegrationresponse.h
  getintegrationresponse_p.h
  getintegrationresponserequest.h
  getintegrationresponserequest_p.h
  getintegrationresponseresponse.h
  getintegrationresponseresponse_p.h
  getintegrationresponsesrequest.h
  getintegrationresponsesrequest_p.h
  getintegrationresponsesresponse.h
  getintegrationresponsesresponse_p.h
  getintegrationsrequest.h
  getintegrationsrequest_p.h
  getintegrationsresponse.h
  getintegrationsresponse_p.h
  getmodelrequest.h
  getmodelrequest_p.h
  getmodelresponse.h
  getmodelresponse_p.h
  getmodelsrequest.h
  getmodelsrequest_p.h
  getmodelsresponse.h
  getmodelsresponse_p.h
  getmodeltemplaterequest.h
  getmodeltemplaterequest_p.h
  getmodeltemplateresponse.h
  getmodeltemplateresponse_p.h
  getrouterequest.h
  getrouterequest_p.h
  getrouteresponse.h
  getrouteresponse_p.h
  getrouteresponserequest.h
  getrouteresponserequest_p.h
  getrouteresponseresponse.h
  getrouteresponseresponse_p.h
  getrouteresponsesrequest.h
  getrouteresponsesrequest_p.h
  getrouteresponsesresponse.h
  getrouteresponsesresponse_p.h
  getroutesrequest.h
  getroutesrequest_p.h
  getroutesresponse.h
  getroutesresponse_p.h
  getstagerequest.h
  getstagerequest_p.h
  getstageresponse.h
  getstageresponse_p.h
  getstagesrequest.h
  getstagesrequest_p.h
  getstagesresponse.h
  getstagesresponse_p.h
  gettagsrequest.h
  gettagsrequest_p.h
  gettagsresponse.h
  gettagsresponse_p.h
  getvpclinkrequest.h
  getvpclinkrequest_p.h
  getvpclinkresponse.h
  getvpclinkresponse_p.h
  getvpclinksrequest.h
  getvpclinksrequest_p.h
  getvpclinksresponse.h
  getvpclinksresponse_p.h
  importapirequest.h
  importapirequest_p.h
  importapiresponse.h
  importapiresponse_p.h
  reimportapirequest.h
  reimportapirequest_p.h
  reimportapiresponse.h
  reimportapiresponse_p.h
  resetauthorizerscacherequest.h
  resetauthorizerscacherequest_p.h
  resetauthorizerscacheresponse.h
  resetauthorizerscacheresponse_p.h
  tagresourcerequest.h
  tagresourcerequest_p.h
  tagresourceresponse.h
  tagresourceresponse_p.h
  untagresourcerequest.h
  untagresourcerequest_p.h
  untagresourceresponse.h
  untagresourceresponse_p.h
  updateapimappingrequest.h
  updateapimappingrequest_p.h
  updateapimappingresponse.h
  updateapimappingresponse_p.h
  updateapirequest.h
  updateapirequest_p.h
  updateapiresponse.h
  updateapiresponse_p.h
  updateauthorizerrequest.h
  updateauthorizerrequest_p.h
  updateauthorizerresponse.h
  updateauthorizerresponse_p.h
  updatedeploymentrequest.h
  updatedeploymentrequest_p.h
  updatedeploymentresponse.h
  updatedeploymentresponse_p.h
  updatedomainnamerequest.h
  updatedomainnamerequest_p.h
  updatedomainnameresponse.h
  updatedomainnameresponse_p.h
  updateintegrationrequest.h
  updateintegrationrequest_p.h
  updateintegrationresponse.h
  updateintegrationresponse_p.h
  updateintegrationresponserequest.h
  updateintegrationresponserequest_p.h
  updateintegrationresponseresponse.h
  updateintegrationresponseresponse_p.h
  updatemodelrequest.h
  updatemodelrequest_p.h
  updatemodelresponse.h
  updatemodelresponse_p.h
  updaterouterequest.h
  updaterouterequest_p.h
  updaterouteresponse.h
  updaterouteresponse_p.h
  updaterouteresponserequest.h
  updaterouteresponserequest_p.h
  updaterouteresponseresponse.h
  updaterouteresponseresponse_p.h
  updatestagerequest.h
  updatestagerequest_p.h
  updatestageresponse.h
  updatestageresponse_p.h
  updatevpclinkrequest.h
  updatevpclinkrequest_p.h
  updatevpclinkresponse.h
  updatevpclinkresponse_p.h
  apigatewayv2client.cpp
  apigatewayv2request.cpp
  apigatewayv2response.cpp
  createapimappingrequest.cpp
  createapimappingresponse.cpp
  createapirequest.cpp
  createapiresponse.cpp
  createauthorizerrequest.cpp
  createauthorizerresponse.cpp
  createdeploymentrequest.cpp
  createdeploymentresponse.cpp
  createdomainnamerequest.cpp
  createdomainnameresponse.cpp
  createintegrationrequest.cpp
  createintegrationresponse.cpp
  createintegrationresponserequest.cpp
  createintegrationresponseresponse.cpp
  createmodelrequest.cpp
  createmodelresponse.cpp
  createrouterequest.cpp
  createrouteresponse.cpp
  createrouteresponserequest.cpp
  createrouteresponseresponse.cpp
  createstagerequest.cpp
  createstageresponse.cpp
  createvpclinkrequest.cpp
  createvpclinkresponse.cpp
  deleteaccesslogsettingsrequest.cpp
  deleteaccesslogsettingsresponse.cpp
  deleteapimappingrequest.cpp
  deleteapimappingresponse.cpp
  deleteapirequest.cpp
  deleteapiresponse.cpp
  deleteauthorizerrequest.cpp
  deleteauthorizerresponse.cpp
  deletecorsconfigurationrequest.cpp
  deletecorsconfigurationresponse.cpp
  deletedeploymentrequest.cpp
  deletedeploymentresponse.cpp
  deletedomainnamerequest.cpp
  deletedomainnameresponse.cpp
  deleteintegrationrequest.cpp
  deleteintegrationresponse.cpp
  deleteintegrationresponserequest.cpp
  deleteintegrationresponseresponse.cpp
  deletemodelrequest.cpp
  deletemodelresponse.cpp
  deleterouterequest.cpp
  deleterouterequestparameterrequest.cpp
  deleterouterequestparameterresponse.cpp
  deleterouteresponse.cpp
  deleterouteresponserequest.cpp
  deleterouteresponseresponse.cpp
  deleteroutesettingsrequest.cpp
  deleteroutesettingsresponse.cpp
  deletestagerequest.cpp
  deletestageresponse.cpp
  deletevpclinkrequest.cpp
  deletevpclinkresponse.cpp
  exportapirequest.cpp
  exportapiresponse.cpp
  getapimappingrequest.cpp
  getapimappingresponse.cpp
  getapimappingsrequest.cpp
  getapimappingsresponse.cpp
  getapirequest.cpp
  getapiresponse.cpp
  getapisrequest.cpp
  getapisresponse.cpp
  getauthorizerrequest.cpp
  getauthorizerresponse.cpp
  getauthorizersrequest.cpp
  getauthorizersresponse.cpp
  getdeploymentrequest.cpp
  getdeploymentresponse.cpp
  getdeploymentsrequest.cpp
  getdeploymentsresponse.cpp
  getdomainnamerequest.cpp
  getdomainnameresponse.cpp
  getdomainnamesrequest.cpp
  getdomainnamesresponse.cpp
  getintegrationrequest.cpp
  getintegrationresponse.cpp
  getintegrationresponserequest.cpp
  getintegrationresponseresponse.cpp
  getintegrationresponsesrequest.cpp
  getintegrationresponsesresponse.cpp
  getintegrationsrequest.cpp
  getintegrationsresponse.cpp
  getmodelrequest.cpp
  getmodelresponse.cpp
  getmodelsrequest.cpp
  getmodelsresponse.cpp
  getmodeltemplaterequest.cpp
  getmodeltemplateresponse.cpp
  getrouterequest.cpp
  getrouteresponse.cpp
  getrouteresponserequest.cpp
  getrouteresponseresponse.cpp
  getrouteresponsesrequest.cpp
  getrouteresponsesresponse.cpp
  getroutesrequest.cpp
  getroutesresponse.cpp
  getstagerequest.cpp
  getstageresponse.cpp
  getstagesrequest.cpp
  getstagesresponse.cpp
  gettagsrequest.cpp
  gettagsresponse.cpp
  getvpclinkrequest.cpp
  getvpclinkresponse.cpp
  getvpclinksrequest.cpp
  getvpclinksresponse.cpp
  importapirequest.cpp
  importapiresponse.cpp
  reimportapirequest.cpp
  reimportapiresponse.cpp
  resetauthorizerscacherequest.cpp
  resetauthorizerscacheresponse.cpp
  tagresourcerequest.cpp
  tagresourceresponse.cpp
  untagresourcerequest.cpp
  untagresourceresponse.cpp
  updateapimappingrequest.cpp
  updateapimappingresponse.cpp
  updateapirequest.cpp
  updateapiresponse.cpp
  updateauthorizerrequest.cpp
  updateauthorizerresponse.cpp
  updatedeploymentrequest.cpp
  updatedeploymentresponse.cpp
  updatedomainnamerequest.cpp
  updatedomainnameresponse.cpp
  updateintegrationrequest.cpp
  updateintegrationresponse.cpp
  updateintegrationresponserequest.cpp
  updateintegrationresponseresponse.cpp
  updatemodelrequest.cpp
  updatemodelresponse.cpp
  updaterouterequest.cpp
  updaterouteresponse.cpp
  updaterouteresponserequest.cpp
  updaterouteresponseresponse.cpp
  updatestagerequest.cpp
  updatestageresponse.cpp
  updatevpclinkrequest.cpp
  updatevpclinkresponse.cpp)

target_link_libraries(QtAwsApiGatewayV2
  PRIVATE QtAwsCore
  PRIVATE Qt${QT_VERSION_MAJOR}::Core
  PRIVATE Qt${QT_VERSION_MAJOR}::Network)
